--- a/setup.cfg
+++ b/setup.cfg
@@ -49,3 +49,4 @@ setup-hooks =
 console_scripts =
     ryu-manager = ryu.cmd.manager:main
     ryu = ryu.cmd.ryu_base:main
+    ryu-dynamic-loader = ryu.cmd.ryu_dynamic_loader:main
